--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,11 +43,11 @@ jobs:
         with:
           version: 5.15.2
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
-      - name: Install Openssl
-        run: brew install openssl
       - name: Build
         run: |
           ls -al
+          pwd
+          cd ../effort-log
           qmake "CONFIG+=release"
           make
           macdeployqt EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
@@ -86,12 +86,15 @@ jobs:
           version: 5.15.2
           arch: win64_mingw81
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
-      - name: Install Openssl
-        run: choco install openssl -y
       - uses: actions/checkout@v2
       - name: Build
         shell: cmd
         run: |
+          dir "C:\"
+          dir "C:\Program Files\"
+          dir "C:\Program Files\OpenSSL\"
+          dir "C:\OpenSSL-Win32"
+          dir "C:\OpenSSL-Win64"
           call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           qmake "CONFIG+=release"
           make
@@ -107,9 +110,9 @@ jobs:
           make
           mkdir bin
           move build\release\effort-log.exe bin
-          copy C:\Program Files\OpenSSL\libeay64.dll bin\libeay64.dll
-          copy C:\Program Files\OpenSSL\libssl64.dll bin\libssl64.dll
-          copy C:\Program Files\OpenSSL\ssleay64.dll bin\ssleay64.dll
+          copy "C:\Program Files\OpenSSL\libeay64.dll" bin\libeay64.dll
+          copy "C:\Program Files\OpenSSL\libssl64.dll" bin\libssl64.dll
+          copy "C:\Program Files\OpenSSL\ssleay64.dll" bin\ssleay64.dll
           7z a effort-log_"${GITHUB_REF}"_win64.zip bin\*
           make clean
       - name: Release
