--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,13 +43,17 @@ jobs:
         with:
           version: 5.15.2
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
+      - name: Get the version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
       - uses: actions/checkout@v2
       - name: Build
         run: |
           qmake "CONFIG+=release"
           make
           macdeployqt build/release/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
-          mv build/release/EffortLog.dmg EffortLog_"${GITHUB_REF}"_osx.dmg
+          mv build/release/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx.dmg
           otool -L EffortLog.app/Contents/MacOS/EffortLog
           make clean
       - name: Build encrypted
@@ -58,7 +62,7 @@ jobs:
           qmake "CONFIG+=release" "CONFIG+=crypt"
           make
           macdeployqt build/release/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
-          mv build/release/EffortLog.dmg EffortLog_"${GITHUB_REF}"_osx_encrypted.dmg
+          mv build/release/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx_encrypted.dmg
           otool -L EffortLog.app/Contents/MacOS/EffortLog
           make clean
       - name: Release
@@ -86,20 +90,25 @@ jobs:
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - name: Install Openssl
         run: choco install openssl -y
+      - name: Get the version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        shell: bash
       - uses: actions/checkout@v2
       - name: Build
         shell: cmd
         run: |
-          dir "C:\Program Files\OpenSSL-Win64\"
-          dir "C:\Program Files\OpenSSL-Win64\bin"
-          dir "C:\Program Files\OpenSSL-Win64\include"
-          dir "C:\Program Files\OpenSSL-Win64\lib"
           call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           qmake "CONFIG+=release"
           make
+      - name: Deploy
+        if: startsWith(github.ref, 'refs/tags/')
+        shell: cmd
+        run: |
           mkdir bin
           move build\release\effort-log.exe bin
-          7z a effort-log_"${GITHUB_REF}"_win64.zip bin\*
+          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip bin\*
           make clean
           rmdir /Q /S bin
       - name: Build encrypted
@@ -108,12 +117,16 @@ jobs:
           call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           qmake "CONFIG+=release" "CONFIG+=crypt"
           make
+      - name: Deploy encrypted
+        if: startsWith(github.ref, 'refs/tags/')
+        shell: cmd
+        run: |
           mkdir bin
           move build\release\effort-log.exe bin
           copy "C:\Program Files\OpenSSL\libeay64.dll" bin\libeay64.dll
           copy "C:\Program Files\OpenSSL\libssl64.dll" bin\libssl64.dll
           copy "C:\Program Files\OpenSSL\ssleay64.dll" bin\ssleay64.dll
-          7z a effort-log_"${GITHUB_REF}"_win64.zip bin\*
+          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip bin\*
           make clean
           rmdir /Q /S
       - name: Release
