--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,10 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           macdeployqt build/release/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
+          otool -L build/release/EffortLog.app/Contents/MacOS/EffortLog
           mv build/release/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx.dmg
-          otool -L EffortLog.app/Contents/MacOS/EffortLog
           make clean
+          rm -rf build/release/EffortLog.dmg
       - name: Build encrypted
         run: |
           qmake "CONFIG+=release" "CONFIG+=crypt"
@@ -67,9 +68,10 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           macdeployqt build/release/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
+          otool -L build/release/EffortLog.app/Contents/MacOS/EffortLog
           mv build/release/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx_encrypted.dmg
-          otool -L EffortLog.app/Contents/MacOS/EffortLog
           make clean
+          rm -rf build/release/EffortLog.dmg
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -113,6 +115,7 @@ jobs:
         run: |
           mkdir bin
           move build\release\effort-log.exe bin
+          windeployqt bin\effort-log.exe
           7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip bin\*
           make clean
           rmdir /Q /S bin
@@ -128,12 +131,12 @@ jobs:
         run: |
           mkdir bin
           move build\release\effort-log.exe bin
-          copy "C:\Program Files\OpenSSL\libeay64.dll" bin\libeay64.dll
-          copy "C:\Program Files\OpenSSL\libssl64.dll" bin\libssl64.dll
-          copy "C:\Program Files\OpenSSL\ssleay64.dll" bin\ssleay64.dll
-          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip bin\*
+          windeployqt bin\effort-log.exe
+          copy "C:\Program Files\OpenSSL\libcrypto-1_1-x64.dll" bin\libcrypto-1_1-x64.dll
+          copy "C:\Program Files\OpenSSL\libssl-1_1-x64.dll" bin\libssl-1_1-x64.dll
+          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64_encrypted.zip bin\*
           make clean
-          rmdir /Q /S
+          rmdir /Q /S bin
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
