--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,143 +3,93 @@ name: build
 on: push
 
 jobs:
-  build-linux:
-    name: Linux
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      matrix:
+        qt_version: [5.15.2, 6.1.0]
+        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
+        crypt: [false, true]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Cache Qt
         id: cache-qt
         uses: actions/cache@v1
         with:
           path: ../Qt
-          key: ${{ runner.os }}-QtCache-5.15.2
+          key: ${{ runner.os }}-QtCache-${{ matrix.qt_version }}
       - uses: jurplel/install-qt-action@v2
         with:
-          version: 5.15.2
+          version: ${{ matrix.qt_version }}
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - uses: actions/checkout@v2
-      - name: Build
-        run: |
-          qmake "CONFIG+=release"
-          make
-          make clean
-      - name: Build encrypted
-        run: |
-          qmake "CONFIG+=release" "CONFIG+=crypt"
-          make
-          make clean
-
-  build-macos:
-    name: macOS
-    runs-on: macos-latest
-    steps:
-      - name: Cache Qt
-        id: cache-qt
-        uses: actions/cache@v1
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-QtCache-5.15.2
-      - uses: jurplel/install-qt-action@v2
-        with:
-          version: 5.15.2
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - name: Get the version
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0"
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
-      - uses: actions/checkout@v2
       - name: Build
+        if: matrix.crypt == 'false'
         run: |
-          qmake "CONFIG+=release"
-          make
-      - name: Deploy
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          macdeployqt build/release/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
-          otool -L build/release/EffortLog.app/Contents/MacOS/EffortLog
-          mv build/release/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx.dmg
-          make clean
-          rm -rf build/release/EffortLog.dmg
+          mkdir build
+          cd build
+          cmake ..
+          cmake --build .
       - name: Build encrypted
+        if: matrix.crypt == 'true'
         run: |
-          qmake "CONFIG+=release" "CONFIG+=crypt"
-          make
-      - name: Deploy encrypted
-        if: startsWith(github.ref, 'refs/tags/')
+          mkdir build
+          cd build
+          cmake -DCRYPT=ON ..
+          cmake --build .
+      - name: Deploy macOS
+        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'false' && matrix.os == 'macOS-latest'
         run: |
-          macdeployqt build/release/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
-          otool -L build/release/EffortLog.app/Contents/MacOS/EffortLog
-          mv build/release/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx_encrypted.dmg
-          make clean
-          rm -rf build/release/EffortLog.dmg
-      - name: Release
+          macdeployqt build/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
+          otool -L build/EffortLog.app/Contents/MacOS/EffortLog
+          mv build/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx.dmg
+          rm -rf build
+      - name: Deploy encrypted macOS
+        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'true' && matrix.os == 'macOS-latest'
+        run: |
+          macdeployqt build/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
+          otool -L build/EffortLog.app/Contents/MacOS/EffortLog
+          mv build/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx_encrypted.dmg
+          rm -rf build
+      - name: Deploy Windows
+        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'false' && matrix.os == 'windows-latest'
+        shell: cmd
+        run: |
+          mkdir bin
+          windeployqt --verbose 2 --no-translations --dir .\bin .\build\effort-log.exe
+          move .\build\effort-log.exe .\bin
+          cd .\bin
+          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip .\*
+          cd ..
+          mv .\bin\effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip .\
+          rmdir /Q /S bin
+      - name: Deploy encrypted Windows
+        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'true' && matrix.os == 'windows-latest'
+        shell: cmd
+        run: |
+          mkdir bin
+          windeployqt --verbose 2 --no-translations --dir .\bin .\build\effort-log.exe
+          move .\build\effort-log.exe .\bin
+          copy "C:\Program Files\OpenSSL-Win64\libcrypto-1_1-x64.dll" bin\libcrypto-1_1-x64.dll
+          copy "C:\Program Files\OpenSSL-Win64\libssl-1_1-x64.dll" bin\libssl-1_1-x64.dll
+          cd .\bin
+          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64_encrypted.zip .\*
+          cd ..
+          mv .\bin\effort-log_${{ steps.get_version.outputs.VERSION }}_win64_encrypted.zip .\
+          rmdir /Q /S bin
+      - name: Release macOS
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.os == 'macOS-latest'
         with:
           files: EffortLog_*.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build-windows:
-    name: Windows
-    runs-on: windows-latest
-    steps:
-      - name: Cache Qt
-        id: cache-qt
-        uses: actions/cache@v1
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-QtCache-5.15.2
-      - uses: jurplel/install-qt-action@v2
-        with:
-          version: 5.15.2
-          arch: win64_mingw81
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
-      - name: Install Openssl
-        run: choco install openssl -y
-      - name: Get the version
-        if: startsWith(github.ref, 'refs/tags/')
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-        shell: bash
-      - uses: actions/checkout@v2
-      - name: Build
-        shell: cmd
-        run: |
-          call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          qmake "CONFIG+=release"
-          make
-      - name: Deploy
-        if: startsWith(github.ref, 'refs/tags/')
-        shell: cmd
-        run: |
-          mkdir bin
-          move build\release\effort-log.exe bin
-          windeployqt bin\effort-log.exe
-          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip bin\*
-          make clean
-          rmdir /Q /S bin
-      - name: Build encrypted
-        shell: cmd
-        run: |
-          call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          qmake "CONFIG+=release" "CONFIG+=crypt"
-          make
-      - name: Deploy encrypted
-        if: startsWith(github.ref, 'refs/tags/')
-        shell: cmd
-        run: |
-          mkdir bin
-          move build\release\effort-log.exe bin
-          windeployqt bin\effort-log.exe
-          copy "C:\Program Files\OpenSSL\libcrypto-1_1-x64.dll" bin\libcrypto-1_1-x64.dll
-          copy "C:\Program Files\OpenSSL\libssl-1_1-x64.dll" bin\libssl-1_1-x64.dll
-          7z a effort-log_${{ steps.get_version.outputs.VERSION }}_win64_encrypted.zip bin\*
-          make clean
-          rmdir /Q /S bin
-      - name: Release
+      - name: Release Windows
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.os == 'windows-latest'
         with:
           files: effort-log_*.zip
         env:
