--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,39 +23,39 @@ jobs:
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - uses: actions/checkout@v2
       - name: Get the version
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0"
+        if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0'
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
       - name: Build
-        if: matrix.crypt == 'false'
+        if: matrix.crypt == false
         run: |
           mkdir build
           cd build
           cmake ..
           cmake --build .
       - name: Build encrypted
-        if: matrix.crypt == 'true'
+        if: matrix.crypt == true
         run: |
           mkdir build
           cd build
           cmake -DCRYPT=ON ..
           cmake --build .
       - name: Deploy macOS
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'false' && matrix.os == 'macOS-latest'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.crypt == false && matrix.os == 'macOS-latest'
         run: |
           macdeployqt build/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
           otool -L build/EffortLog.app/Contents/MacOS/EffortLog
           mv build/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx.dmg
           rm -rf build
       - name: Deploy encrypted macOS
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'true' && matrix.os == 'macOS-latest'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.crypt == true && matrix.os == 'macOS-latest'
         run: |
           macdeployqt build/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
           otool -L build/EffortLog.app/Contents/MacOS/EffortLog
           mv build/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx_encrypted.dmg
           rm -rf build
       - name: Deploy Windows
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'false' && matrix.os == 'windows-latest'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.crypt == false && matrix.os == 'windows-latest'
         shell: cmd
         run: |
           mkdir bin
@@ -67,7 +67,7 @@ jobs:
           mv .\bin\effort-log_${{ steps.get_version.outputs.VERSION }}_win64.zip .\
           rmdir /Q /S bin
       - name: Deploy encrypted Windows
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.crypt == 'true' && matrix.os == 'windows-latest'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.crypt == true && matrix.os == 'windows-latest'
         shell: cmd
         run: |
           mkdir bin
@@ -82,14 +82,14 @@ jobs:
           rmdir /Q /S bin
       - name: Release macOS
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.os == 'macOS-latest'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.os == 'macOS-latest'
         with:
           files: EffortLog_*.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Release Windows
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.qt_version }} == "6.1.0" && matrix.os == 'windows-latest'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.os == 'windows-latest'
         with:
           files: effort-log_*.zip
         env:
