--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
         qt_version: [5.15.2, 6.1.0]
         os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
         crypt: [false, true]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
       - name: Cache Qt
@@ -34,11 +35,18 @@ jobs:
           cmake ..
           cmake --build .
       - name: Build encrypted
-        if: matrix.crypt == true
+        if: matrix.crypt == true && matrix.os != 'macOS-latest'
         run: |
           mkdir build
           cd build
           cmake -DCRYPT=ON ..
+          cmake --build .
+      - name: Build encrypted MacOS
+        if: matrix.crypt == true && matrix.os == 'macOS-latest'
+        run: |
+          mkdir build
+          cd build
+          cmake -DCRYPT=ON -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl ..
           cmake --build .
       - name: Deploy macOS
         if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.crypt == false && matrix.os == 'macOS-latest'
