--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Get the version
         if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0'
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        shell: bash
       - name: Build
         run: |
           mkdir build
@@ -88,7 +89,8 @@ jobs:
       - name: Get the version
         if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0'
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        shell: bash
       - name: Build encrypted Linux
         if: matrix.os == 'ubuntu-latest'
         run: |
