--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Deploy macOS
         if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.os == 'macos-latest'
         run: |
+          mv build/effort-log build/EffortLog.app
           macdeployqt build/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
           otool -L build/EffortLog.app/Contents/MacOS/EffortLog
           mv build/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx.dmg
@@ -45,6 +46,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.os == 'windows-latest'
         shell: cmd
         run: |
+          mv build/effort-log build/effort-log.exe
           mkdir bin
           windeployqt --verbose 2 --no-translations --dir .\bin .\build\effort-log.exe
           move .\build\effort-log.exe .\bin
@@ -119,6 +121,7 @@ jobs:
       - name: Deploy encrypted macOS
         if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.os == 'macos-latest'
         run: |
+          mv build/effort-log build/EffortLog.app
           macdeployqt build/EffortLog.app -always-overwrite -verbose=3 -appstore-compliant -dmg
           otool -L build/EffortLog.app/Contents/MacOS/EffortLog
           mv build/EffortLog.dmg EffortLog_${{ steps.get_version.outputs.VERSION }}_osx_encrypted.dmg
@@ -127,6 +130,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/') && matrix.qt_version == '6.1.0' && matrix.os == 'windows-latest'
         shell: cmd
         run: |
+          mv build/effort-log build/effort-log.exe
           mkdir bin
           windeployqt --verbose 2 --no-translations --dir .\bin .\build\effort-log.exe
           move .\build\effort-log.exe .\bin
